feat: changed the project structure, scripts, layout

--- a/src/html/components/logo.html
+++ b/src/html/components/logo.html
@@ -7,7 +7,7 @@
 
 <div class="image-logo">
   <a href="index.html" class="image-logo__link">
-    <img class="image-logo__image" src="logo/bread-logo.png">
+    <img class="image-logo__image" src="logo/bread-logo.png" alt="logo">
   </a>
 </div>
 
