--- a/src/html/layout/faq-header.html
+++ b/src/html/layout/faq-header.html
@@ -1,27 +1,27 @@
 <header class="header">
   <div class="container">    
     <div class="header__inner">
-      @@include('logo.html', {}) 
+      @@include('../components/logo.html', {}) 
       <span class="menu-icon fas fa-bars blind-click"></span>
       <nav class="menu blind-click">
         <ul class="menu__list blind-click">
-          <li class="menu__list-item">
-            <span class="menu__list-title menu__list-title--active blind-click">Our bakery</span>
+          <li class="menu__list-item blind-click">
+            <a class="menu__list-link" href="bakery.html">
+              <span class="menu__list-title blind-click">Our bakery</span>
+            </a>
           </li>
   
-          <li class="menu__list-item">
+          <li class="menu__list-item blind-click">
             <a class="menu__list-link" href="shipping.html">
               <span class="menu__list-title blind-click">Shipping and payment</span>
             </a>
           </li>
   
-          <li class="menu__list-item">
-            <a class="menu__list-link" href="faq.html">
-              <span class="menu__list-title blind-click">FAQ</span>
-            </a>
+          <li class="menu__list-item blind-click">           
+            <span class="menu__list-title menu__list-title--active blind-click">FAQ</span>
           </li>
   
-          <li class="menu__list-item">
+          <li class="menu__list-item blind-click">
             <a class="menu__list-link" href="contacts.html">
               <span class="menu__list-title blind-click">Contacts</span>
             </a>
@@ -29,8 +29,8 @@
         </ul>
       </nav>
     </div>
-  </div>
-  <hr class="header__line"> 
+  </div> 
+  <hr class="header__line">
 </header>
 
   
