--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,9 @@
 /* Операторы:
   & - имитирует родителя
   > - обращение к первому дочернему элементу */
-  
+
+@import "base/scroll-animation.scss";
+
 @import "helper/variables.scss";
 @import "helper/brakepoints.scss";
 
