--- a/src/scss/section/contacts.scss
+++ b/src/scss/section/contacts.scss
@@ -308,6 +308,7 @@ textarea.form__input {
   font-size: 16px;
   line-height: 120%;
   cursor: pointer;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); 
 }
 
 .checkbox__label::before {
@@ -352,7 +353,8 @@ textarea.form__input {
   text-transform: uppercase;
   letter-spacing: 2px;
   outline: 0; 	 
-  cursor: pointer;	 
+  cursor: pointer;	
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  
   /*box-shadow: 0 5px 0 #161b13;*/
   /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);     
   transition: background-color 0.2s ease 0s;*/	 	 	 
