--- a/src/scss/section/contacts.scss
+++ b/src/scss/section/contacts.scss
@@ -150,6 +150,7 @@
 }
 
 .form__item {
+  position: relative;
   margin: 0 0 20px 0;
 }
 
@@ -357,17 +358,70 @@ textarea.form__input {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);  
   /*box-shadow: 0 5px 0 #161b13;*/
   /*box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);     
-  transition: background-color 0.2s ease 0s;*/	 	 	 
+  transition: background-color 0.2s ease 0s;*/
+  
+  &--inactive {
+    background-color: silver; 
+    cursor: default;
+  }
+  	 	 	 
 }
 
 .form__button:hover {
   background-color: silver;
 }
 
-.form__button:active {
-  top: 3px;	 
+.form__button:active {	 
   box-shadow: 0 0 5px green;
 }
+
+
+/***** TODO - tooltips ******/
+.form__tooltip {
+  position: relative;
+  margin-left: 20px;
+  background: #eaeaea;		
+  text-decoration: none;
+  color: red; /*#222;*/
+  outline: none;  
+}
+
+.form__tooltip-text {
+  visibility: hidden;
+  position: absolute;
+  bottom: 70px;
+  left: 50%;
+  z-index: 999;
+  width: 230px;
+  margin-left: -127px; 
+  padding: 10px;	
+  font-size: 12px; 
+  letter-spacing: 0;
+  opacity: .7;
+  background-color: #fff;	
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -moz-box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+  box-shadow: 0 1px 2px rgba(0,0,0,.4), 0 1px 0 rgba(255,255,255,.5) inset;
+  text-shadow: 0 1px 0 rgba(255,255,255,.4);
+  text-align:center;
+}
+
+.form__tooltip-text:before,
+.form__tooltip-text:after {
+  content: "";
+  position: absolute;
+  z-index: 1000;
+  bottom: -7px;
+  left: 50%;
+  margin-left: -8px;
+  border-top: 8px solid #fff;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 0;
+}
+/***** tooltips *****/
 /***** form styles *****/
 
 
